MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'C:\Users\User\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
Rebuild target 'CAN_IO_Expander'
assembling startup_stm32f072xb.s...
compiling stm32f0xx_it.c...
../Core/Src/main.c(131): error: function definition is not allowed here
  131 |   {
      |   ^
../Core/Src/main.c(345): warning: label followed by a declaration is a C23 extension [-Wc23-extensions]
  345 |         uint8_t uart_num = CAN_RxData[1];
      |         ^
../Core/Src/main.c(364): warning: label followed by a declaration is a C23 extension [-Wc23-extensions]
  364 |         uint32_t Changed_ID = ((CAN_RxData[1] << 24) | (CAN_RxData[2] << 16) | (CAN_RxData[3] << 8) | CAN_RxData[4]); //The ID is contained in the Data Arrays from 1 to 4 
      |         ^
2 warnings and 1 error generated.
compiling main.c...
compiling stm32f0xx_hal_i2c_ex.c...
compiling stm32f0xx_hal.c...
compiling stm32f0xx_hal_msp.c...
compiling stm32f0xx_hal_rcc_ex.c...
compiling stm32f0xx_hal_rcc.c...
compiling stm32f0xx_hal_gpio.c...
compiling stm32f0xx_hal_can.c...
compiling stm32f0xx_hal_cortex.c...
compiling stm32f0xx_hal_dma.c...
compiling stm32f0xx_hal_pwr_ex.c...
compiling stm32f0xx_ll_usb.c...
compiling stm32f0xx_hal_pwr.c...
compiling stm32f0xx_hal_flash_ex.c...
compiling stm32f0xx_hal_flash.c...
compiling stm32f0xx_hal_exti.c...
compiling system_stm32f0xx.c...
compiling stm32f0xx_hal_pcd_ex.c...
compiling stm32f0xx_hal_uart_ex.c...
compiling stm32f0xx_hal_tim_ex.c...
compiling stm32f0xx_hal_pcd.c...
compiling stm32f0xx_hal_i2c.c...
compiling stm32f0xx_hal_uart.c...
compiling stm32f0xx_hal_tim.c...
"CAN_IO_Expander\CAN_IO_Expander.axf" - 1 Error(s), 2 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
